# rust-to-mobile-events-poc

./: .gitignore  Cargo.toml  Package.swift  build.rs  jitpack.yml
Sources/events_poc/: events_poc.swift
android/events_poc/: settings.gradle
android/events_poc/app/: build.gradle
android/events_poc/app/src/androidTest/java/com/getlipa/events_poc/: ExampleInstrumentedTest.kt
android/events_poc/app/src/main/: AndroidManifest.xml
android/events_poc/app/src/main/res/values/: strings.xml  themes.xml
android/events_poc/app/src/main/res/values-night/: themes.xml
android/events_poc/events_poc/: build.gradle
android/events_poc/events_poc/src/androidTest/java/com/getlipa/events_poc/: ExampleInstrumentedTest.kt
android/events_poc/events_poc/src/main/: AndroidManifest.xml
android/events_poc/events_poc/src/main/java/com/getlipa/events_poc/: events_poc.kt
android/events_poc/events_poc/src/test/java/com/getlipa/events_poc/: ExampleUnitTest.kt
android/events_poc/gradle/wrapper/: gradle-wrapper.properties
events_pocFFI.xcframework/: Info.plist
events_pocFFI.xcframework/ios-arm64/events_pocFFI.framework/Headers/: events_pocFFI.h
events_pocFFI.xcframework/ios-arm64/events_pocFFI.framework/Modules/: module.modulemap
events_pocFFI.xcframework/ios-arm64_x86_64-simulator/events_pocFFI.framework/Headers/: events_pocFFI-umbrella.h  events_pocFFI.h
scripts/: build-android-library.sh  build-swift-package.sh  generate-bindings.sh
src/: events_poc.udl  lib.rs
