[package]
name = "events_poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "uniffi_events_poc"

[dependencies]
uniffi = {version = "0.19.3"}
log = "0.4.17"
env_logger = "0.9.0"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"


[build-dependencies]
#uniffi_build = {version = "0.19.3"}
uniffi_build = {version = "0.19.3", features = [ "builtin-bindgen" ]}